--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>PRJ4 Assignment 1</title>
+<title>PRJ4 Assignment 3</title>
 </head>
 <body>
 
-<h1>PRJ4 First Assignment</h1>
+<h1>Sustainability is the key to successs</h1>
 <h3>Dafne Ritchi</h3>
-<h3>Plamen Mitev</h3>
+<h3>Edited by: Plamen Mitev</h3>
   
-<img src="images/picture1" alt="word">
+<img src="images/sustainability.jpg" alt="word">
 
 <p> Created by Dafne Ritchi, student of 
 <a href="https://www.buas.nl/">Breda University of Applied Sciences</a>
