--- a/index.html
+++ b/index.html
@@ -5,10 +5,9 @@
 <title>PRJ4 Assignment 3</title>
 </head>
 <body>
-
+<h3>Welcome to my page!</h3>
 <h1>Sustainability is the key to successs</h1>
-<h3>Dafne Ritchi</h3>
-<h3>Edited by: Plamen Mitev</h3>
+<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur convallis, enim a viverra mattis, eros nulla ultricies tortor, a pretium lectus urna in eros. Duis rhoncus finibus tincidunt. Nulla et leo justo. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Praesent ultricies tempor varius. Aenean rhoncus luctus rutrum. Nunc lobortis sodales nulla, id egestas metus faucibus a. Maecenas mi orci, iaculis venenatis elit vel, semper ornare nisl. Pellentesque neque quam, ornare et blandit pharetra, mattis ut nisl. Curabitur dictum tellus vitae est aliquam eleifend. Phasellus posuere, enim fermentum dignissim placerat, dui quam auctor mi, vel dignissim nisi ipsum at arcu.</p>
   
 <img src="images/sustainability.jpg" alt="word">
 
